# roboterarm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  calibrate.py  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
deploy/: hotspot.sh  roboterarm.service  setup_station.sh  turbowarp_holen.sh
docs/: anleitung_kinder.md  api.md  architektur.md  curriculum.md  hardware.md  scratch_edublocks.md  shell_spickzettel.md
examples/: find_ball.py  ki_training.py  koordinaten.py  objekt_lernen.py  sortieren.py  tanz.py
hardware/3d-druck/: CREDITS.md  README.md  hole_dateien.sh  kamera_clip.scad  namensschild.py  namensschild_ANNA.stl  namensschild_MAX.stl  namensschild_TEAM-1.stl
lernen/: index.html  manifest.json  style.css  sw.js
lernen/assets/: README.md
lernen/fertig/: index.html
lernen/trainer/: index.html
roboterarm/: __init__.py  arm.py  config.py  kamera.py  ml.py  projekt.py  servos.py  verhalten.py  vision.py  vision_color.py
scratch/: README.md  roboterarm_extension.js
service/: robot_service.py
show/: README.md  dirigent.py  tanz_demo.json
tests/: test_roboterarm.py  test_service.py
web/: index.html
web/static/: app.js  style.css
