[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roboterarm"
version = "0.2.0"
description = "Offener KI-Roboterarm für Bildung — Scratch -> Python, beliebige Objekte, offline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "roboterarm Workshop" }]
keywords = ["robotics", "education", "machine-learning", "scratch", "raspberry-pi", "rock-pi"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# Auf dem Board zusätzlich installieren:
hardware = ["smbus2>=0.4", "opencv-python-headless>=4.8"]

[project.urls]
Documentation = "./docs"

[tool.setuptools]
packages = ["roboterarm"]
